--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello!"
-        android:textSize="40dp"
+        android:text="Hello World!"
+        android:textSize="40sp"
         android:textStyle="bold"/>
 
 </LinearLayout>
