Step 5 - UI with display stats

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="StatsText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/purple</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="StatsText.Big">
+        <item name="android:textSize">42sp</item>
+    </style>
+
+    <style name="StatsText.Huge">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">70sp</item>
     </style>
 
 </resources>
