--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/purple_extra_light"
     android:gravity="center">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textSize="40sp"
-        android:textStyle="bold"/>
+        android:id="@+id/wake_ups_number_text"
+        style="@style/StatsText.Huge"
+        android:text="@string/dummy_number" />
+
+    <TextView
+        style="@style/StatsText"
+        android:layout_marginTop="-12dp"
+        android:text="@string/wake_ups" />
+
+    <TextView
+        android:id="@+id/wake_up_time_text"
+        style="@style/StatsText.Big"
+        android:layout_marginTop="20dp"
+        android:text="@string/dummy_time" />
+
+    <TextView
+        style="@style/StatsText"
+        android:layout_marginTop="-6dp"
+        android:text="@string/wake_up_time" />
+
+    <TextView
+        android:id="@+id/longest_strike_text"
+        style="@style/StatsText.Big"
+        android:layout_marginTop="20dp"
+        android:text="@string/dummy_time" />
+
+    <TextView
+        style="@style/StatsText"
+        android:layout_marginTop="-6dp"
+        android:text="@string/longest_streak" />
 
 </LinearLayout>
