--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#666666</color>
-    <color name="colorPrimaryDark">#333333</color>
-    <color name="colorAccent">#FF4081</color>
+
+    <color name="purple">#7b1fa2</color>
+    <color name="purple_extra_light">#f3e5f5</color>
+
 </resources>
